feat: add optional public URL for serving uploaded files from S3

--- a/.env.sample
+++ b/.env.sample
@@ -96,6 +96,10 @@ AWS_REGION=xx-xxxx-x
 AWS_S3_ACCELERATE_URL=
 AWS_S3_UPLOAD_BUCKET_URL=http://s3:4569
 AWS_S3_UPLOAD_BUCKET_NAME=bucket_name_here
+# Optional: Public URL for serving uploaded files if different from AWS_S3_UPLOAD_BUCKET_URL.
+# Use this when your S3 endpoint is not publicly accessible or when serving files through a CDN.
+# If not provided, defaults to AWS_S3_UPLOAD_BUCKET_URL.
+AWS_S3_PUBLIC_URL=
 AWS_S3_FORCE_PATH_STYLE=true
 AWS_S3_ACL=private
 
