--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "url": "https://github.com/sponsors/outline"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">= 20 <=22"
   },
   "repository": {
     "type": "git",
@@ -101,7 +101,7 @@
     "@types/form-data": "^2.5.2",
     "@types/mailparser": "^3.4.6",
     "@types/sanitize-filename": "^1.6.3",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.6.0",
     "addressparser": "^1.0.1",
     "async-sema": "^3.1.1",
     "autotrack": "^2.4.1",
