--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/form-data": "^2.5.2",
     "@types/mailparser": "^3.4.6",
     "@types/sanitize-filename": "^1.6.3",
+    "@types/sorted-array-functions": "^1.3.3",
     "@vitejs/plugin-react": "^3.1.0",
     "addressparser": "^1.0.1",
     "async-sema": "^3.1.1",
@@ -242,6 +243,7 @@
     "socket.io-client": "^4.8.1",
     "socket.io-redis": "^6.1.1",
     "sonner": "^1.7.4",
+    "sorted-array-functions": "^1.3.0",
     "stoppable": "^1.1.0",
     "string-replace-to-array": "^2.1.1",
     "styled-components": "^5.3.11",
