--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,9 +1,6 @@
 {
   "$schema": "./node_modules/oxlint/configuration_schema.json",
   "plugins": [],
-  "categories": {
-    "correctness": "off"
-  },
   "env": {
     "builtin": true
   },
@@ -63,7 +60,7 @@
     "no-unsafe-optional-chaining": "error",
     "no-unused-labels": "error",
     "no-unused-private-class-members": "error",
-    "no-unused-vars": "off",
+    "no-unused-vars": "error",
     "no-useless-backreference": "error",
     "no-useless-catch": "error",
     "no-useless-escape": "error",
