--- a/package.json
+++ b/package.json
@@ -261,7 +261,7 @@
     "uuid": "^8.3.2",
     "validator": "13.15.0",
     "vaul": "^1.1.2",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@7.0.10",
     "vite-plugin-pwa": "^0.21.2",
     "winston": "^3.17.0",
     "ws": "^7.5.10",
@@ -366,7 +366,6 @@
     "yarn-deduplicate": "^6.0.2"
   },
   "resolutions": {
-    "rolldown": "https://pkg.pr.new/rolldown@59ccf5f",
     "prosemirror-transform": "1.10.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "d3": "^7.0.0",
