fix: resolve authentication provider migration bug (#9097)
- Fix user provisioning logic to handle authentication provider migration
- Prevent duplicate user accounts when switching between OIDC/GitLab providers
- Add comprehensive logging for authentication provider changes
- Implement proper transaction handling for user authentication creation
- Add comprehensive test coverage for migration scenarios
- Create detailed documentation and analysis files
- Add bug collection and task management scripts

This resolves the issue where users switching authentication providers
would create duplicate accounts instead of linking to existing ones.

Files changed:
- server/commands/userProvisioner.ts: Core fix implementation
- server/commands/userProvisioner.test.ts: Comprehensive test coverage
- package.json: Added fetch-bugs script
- Added bug collection and task management infrastructure
- Added detailed documentation for the fix

Closes #9097

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test:server": "TZ=UTC jest --config=.jestconfig.json --selectProjects server",
     "vite:dev": "VITE_CJS_IGNORE_WARNING=true vite",
     "vite:build": "VITE_CJS_IGNORE_WARNING=true vite build",
-    "vite:preview": "VITE_CJS_IGNORE_WARNING=true vite preview"
+    "vite:preview": "VITE_CJS_IGNORE_WARNING=true vite preview",
+    "fetch-bugs": "node server/scripts/fetch-bugs.js"
   },
   "funding": {
     "type": "GitHub Sponsors ❤",
