--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -71,31 +71,12 @@
   },
   "overrides": [
     {
-      "files": [
-        "**/*.{js,jsx,ts,tsx}"
-      ],
+      "files": ["**/*.{js,jsx,ts,tsx}"],
       "rules": {
-        "no-restricted-imports": [
-          "error",
-          {
-            "paths": [
-              {
-                "name": "reakit/Menu",
-                "importNames": [
-                  "useMenuState"
-                ],
-                "message": "Do not use useMenuState from reakit/Menu. Use useMenuState instead."
-              }
-            ]
-          }
-        ],
         "eqeqeq": "error",
         "curly": "error",
         "no-console": "error",
-        "arrow-body-style": [
-          "error",
-          "as-needed"
-        ],
+        "arrow-body-style": ["error", "as-needed"],
         "no-useless-escape": "off",
         "react/react-in-jsx-scope": "off",
         "react/self-closing-comp": [
@@ -119,13 +100,7 @@
           }
         ]
       },
-      "plugins": [
-        "eslint",
-        "oxc",
-        "react",
-        "typescript",
-        "import"
-      ]
+      "plugins": ["eslint", "oxc", "react", "typescript", "import"]
     }
   ]
 }
