Jira chip integration Bitbucket chip integration Date chip implementation Site map implementation Delete action restriction for users -> ui level cursor rules

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "url": "https://github.com/sponsors/outline"
   },
   "engines": {
-    "node": "20 || 22"
+    "node": "20 || 22 || 23"
   },
   "repository": {
     "type": "git",
