Update .env.sample with required variables section
A previous edit removed the "REQUIRED" section, adding it back.

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+# –––––––––––––––– REQUIRED ––––––––––––––––
+
 NODE_ENV=production
 
 # This URL should point to the fully qualified, publicly accessible, URL. If using a
