--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 URL=https://local.outline.dev:3000
 
-DATABASE_URL=postgres://user:pass@127.0.0.1:5432/outline
+#DATABASE_URL=postgres://user:pass@127.0.0.1:5432/outline
 REDIS_URL=redis://127.0.0.1:6379
 
 SMTP_FROM_EMAIL=hello@example.com
