--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dotenvx/dotenvx": "^1.49.0",
     "@emoji-mart/data": "^1.2.1",
+    "@excalidraw/excalidraw": "^0.18.0",
     "@fast-csv/parse": "^5.0.5",
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-brands-svg-icons": "^7.0.1",
