feat: pan and zoom inside lightbox

--- a/package.json
+++ b/package.json
@@ -228,6 +228,7 @@
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-waypoint": "^10.3.0",
     "react-window": "^1.8.11",
+    "react-zoom-pan-pinch": "^3.7.0",
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.2",
     "refractor": "^3.6.0",
