--- a/package.json
+++ b/package.json
@@ -270,7 +270,7 @@
     "uuid": "^8.3.2",
     "validator": "13.15.15",
     "vaul": "^1.1.2",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@7.0.4",
     "vite-plugin-pwa": "1.0.3",
     "winston": "^3.17.0",
     "ws": "^7.5.10",
@@ -358,7 +358,7 @@
     "concurrently": "^8.2.2",
     "discord-api-types": "^0.38.20",
     "husky": "^8.0.3",
-    "i18next-parser": "^8.13.0",
+    "i18next-parser": "^9.3.0",
     "ioredis-mock": "^8.9.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
