--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
     "@types/form-data": "^2.5.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/mailparser": "^3.4.6",
     "@types/sanitize-filename": "^1.6.3",
     "@vitejs/plugin-react-oxc": "^0.2.3",
