--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ node_modules/*
 .env.local
 .env.production
 .log
-.yarn
+.vscode/*
 npm-debug.log
 stats.json
 .DS_Store
@@ -14,5 +14,3 @@ data/*
 *.pem
 *.key
 *.cert
-.vscode
-.claude
