--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "yarn clean && yarn vite:build && yarn build:i18n && yarn build:server",
     "start": "node ./build/server/index.js",
     "dev": "NODE_ENV=development yarn concurrently -n api,collaboration  -c \"blue,magenta\" \"node --inspect=0.0.0.0 build/server/index.js --services=cron,collaboration,websockets,admin,web,worker\"",
-    "dev:backend": "NODE_ENV=development nodemon --exec \"yarn build:server && yarn dev\" -e js,ts,tsx --ignore data/ --ignore build/ --ignore app/ --ignore shared/editor --ignore server/migrations",
+    "dev:backend": "NODE_ENV=development nodemon --exec \"yarn build:server && yarn dev\" -e js,ts,tsx --ignore *.test.ts --ignore data/ --ignore build/ --ignore app/ --ignore shared/editor --ignore server/migrations",
     "dev:watch": "NODE_ENV=development yarn concurrently -n backend,frontend \"yarn dev:backend\" \"yarn vite:dev\"",
     "lint": "oxlint --type-aware app server shared plugins",
     "lint:changed": "git diff --name-only --diff-filter=ACMRTUXB | grep -E '\\.(js|jsx|ts|tsx)$' | xargs -r oxlint",
@@ -256,7 +256,6 @@
     "styled-components": "^5.3.11",
     "styled-components-breakpoint": "^2.1.1",
     "styled-normalize": "^8.1.1",
-    "svgo": "^4.0.0",
     "throng": "^5.0.0",
     "tiny-cookie": "^2.5.1",
     "tmp": "^0.2.5",
@@ -268,7 +267,7 @@
     "uuid": "^8.3.2",
     "validator": "13.15.15",
     "vaul": "^1.1.2",
-    "vite": "npm:rolldown-vite@7.0.4",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-pwa": "1.0.3",
     "winston": "^3.17.0",
     "ws": "^7.5.10",
@@ -356,7 +355,7 @@
     "concurrently": "^8.2.2",
     "discord-api-types": "^0.38.20",
     "husky": "^8.0.3",
-    "i18next-parser": "^9.3.0",
+    "i18next-parser": "^8.13.0",
     "ioredis-mock": "^8.9.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
