--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "url": "https://github.com/sponsors/outline"
   },
   "engines": {
-    "node": "20 || 22"
+    "node": ">=22"
   },
   "repository": {
     "type": "git",
