--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "octokit": "^3.2.2",
     "outline-icons": "^3.13.1",
     "oy-vey": "^0.12.1",
+    "pako": "^2.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-oauth2": "^1.8.0",
