fix: apply react/rules-of-hooks

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -94,7 +94,8 @@
             "args": "after-used",
             "ignoreRestSiblings": true
           }
-        ]
+        ],
+        "react/rules-of-hooks": "error"
       },
       "plugins": ["eslint", "oxc", "react", "typescript", "import"]
     }
