--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "socket.io-redis": "^6.1.1",
+    "socks": "^2.8.7",
     "sonner": "^1.7.4",
     "stoppable": "^1.1.0",
     "string-replace-to-array": "^2.1.1",
