chore: Remove info logs in CI

--- a/.env.test
+++ b/.env.test
@@ -35,3 +35,6 @@ URL=http://localhost:3000
 COLLABORATION_URL=
 REDIS_URL=redis://localhost:6379
 UTILS_SECRET=test-utils-secret
+
+DEBUG=
+LOG_LEVEL=error
