--- a/package.json
+++ b/package.json
@@ -267,7 +267,7 @@
     "uuid": "^11.1.0",
     "validator": "13.15.22",
     "vaul": "^1.1.2",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@7.3.0",
     "vite-plugin-pwa": "1.0.3",
     "winston": "^3.17.0",
     "ws": "^7.5.10",
@@ -374,7 +374,6 @@
     "yarn-deduplicate": "^6.0.2"
   },
   "resolutions": {
-    "rolldown": "https://pkg.pr.new/rolldown@59ccf5f",
     "prosemirror-transform": "1.10.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "d3": "^7.0.0",
