--- a/.env.sample
+++ b/.env.sample
@@ -208,6 +208,7 @@ GITHUB_APP_ID=
 GITHUB_APP_PRIVATE_KEY=
 
 # The GitLab integration allows previewing issue and merge request links
+# DOCS: 
 GITLAB_CLIENT_ID=
 GITLAB_CLIENT_SECRET=
 
