chore: Upgrade tmp dep

--- a/package.json
+++ b/package.json
@@ -378,6 +378,7 @@
     "@types/react": "17.0.75",
     "@types/koa": "2.15.0",
     "@hocuspocus/server": "1.1.2",
+    "fengari": "0.1.5",
     "prosemirror-transform": "1.10.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "d3": "^7.0.0",
